--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,185 +1,3 @@
-
-
-//     .nosotros__info {
-//         display: flex;
-//         margin-bottom: 2.5rem;
-//         .informacion {
-//             display: flex;
-//             flex-direction: column;
-//             justify-content: center;
-//             width: 50%;
-//             padding: 0 2.5rem;
-
-//             h3 {
-//                 width: 100%;
-//                 text-align: center;
-//                 margin-bottom: 2.5rem;
-//             }
-
-//             p {
-//                 width: 90%;
-//                 margin: 0 auto;
-//                 text-align: center;
-//                 line-height: 120%;
-//             }
-//         }
-
-//         .imagen {
-//             width: 50%;
-//             height: 100%;
-//             border-radius: 3rem;
-//             object-fit: cover;
-//             text-align: center;
-//             overflow: hidden;
-//         }
-//     }
-// }
-
-// .ordenUno {
-//     order: 2;
-// }
-
-// .ordenDos {
-//     order: 1;
-// }
-
-
-
-
-.cuerpoNosotros {
-    grid-area: main;
-    margin-top: 7rem;
-    margin-bottom: 7rem;
-    .nosotros {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        width: 95%;
-        margin: 0 auto;
-        margin-bottom: 7rem;
-        .nosotros__info {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            margin-bottom: 5rem;
-            &:last-child {
-                margin-bottom: 0;
-            }
-            .informacion {
-                h3 {
-                    margin-bottom: 1rem;
-                    text-decoration: underline;
-                }
-            }
-            .imagen {
-                img {
-                    border-radius: 2rem;
-                    margin-top: 1rem;
-                    box-shadow: 0rem 0rem 2rem $colorSombra;
-                    border: 1px solid $colorBordeProducto;
-                }
-            }
-            
-        }
-    }
-
-
-    .infoClientes {
-        @include propiedadesGenerales ($colorFondoDos, 100%, auto, 0.5rem);
-        padding: 5rem 0;
-        text-align: center;
-        margin-bottom: 5rem;
-        .contenedorTitulo{
-            margin-bottom: 5rem;
-        }
-        .clientesFelices {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            .opinion {
-                width: 25rem;
-                height: 23rem;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-                margin: 0 1em;
-                margin-bottom: 2.5rem;
-                &:last-child {
-                    margin-bottom: 0;
-                }
-                img {
-                    width: 8rem;
-                    height: 8rem;
-                    border-radius: 50%;
-                    overflow: hidden;
-                    margin-bottom: 1.5rem;
-                }
-                p {
-                    font-size: 1.3rem;
-                    span {
-                        font-size: 1.4rem;
-                        font-weight: 800;
-                    }
-                }
-            }
-        }
-    }
-    .infoUbicacion {
-        @include propiedadesGenerales ($colorFondo, 100%, auto, 0);
-        text-align: center;
-        .contenedorTitulo{
-            margin-bottom: 2.5rem;
-        }
-        p {
-            width: 90%;
-            margin: 0 auto;
-        }
-        .ubicacion {
-            display: flex;
-            flex-direction: column;
-            width: 90%;
-            margin: 0 auto;
-            
-            .ubicacion__local {
-                .local {
-                    width: 100%;               
-                    object-fit: contain;
-                    
-                }
-            }
-            .ubicacion__mapa {
-                width: 100%;
-                height: 30rem;
-                box-shadow: 0rem 0rem 2rem $colorSombra;
-                border: 1px solid $colorBordeProducto;
-                
-            }
-        }
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// YA ESTA ACOMODADO
-
 // Main Index
 .cuerpoIndex {
     margin-top: 7rem;
@@ -217,27 +35,28 @@
     grid-area: main;
     margin-top: 7rem;
     margin-bottom: 7rem;
-}
-.infoTienda {
-    @include propiedadesGenerales ($colorFondoDos, 100%, auto, 0.5rem);
-    padding: 5rem 0;
-    text-align: center;
-    margin-bottom: 5rem;
-    .contenedorTitulo{
-        margin-bottom: 2.5rem;
+    .infoTienda {
+        @include propiedadesGenerales ($colorFondoDos, 100%, auto, 0.5rem);
+        padding: 5rem 0;
+        text-align: center;
+        margin-bottom: 5rem;
+        .contenedorTitulo{
+            margin-bottom: 2.5rem;
+        }
+        p {
+            width: 90%;
+            margin: 0 auto;
+        }
     }
-    p {
-        width: 90%;
-        margin: 0 auto;
+    .tituloLogo {
+        text-align: center;
+        margin-top: 1rem;
+        img {
+            width: 4rem;
+            height: 4rem;
+        }
     }
-}
-.tituloLogo {
-    text-align: center;
-    margin-top: 1rem;
-    img {
-        width: 4rem;
-        height: 4rem;
-    }
+    
 }
 .contenedorZapatillas {
     display: flex;
@@ -348,15 +167,133 @@
         opacity: 40%;
     }
 }
+//Main Nosotros
+.cuerpoNosotros {
+    grid-area: main;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+    .nosotros {
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: 95%;
+        margin: 0 auto;
+        margin-bottom: 7rem;
+        .nosotros__info {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            margin-bottom: 7rem;
+            &:last-child {
+                margin-bottom: 0;
+            }
+            .informacion {
+                h3 {
+                    margin-bottom: 1.5rem;
+                    color: $colorHover;
+                }
+            }
+            .imagen {
+                img {
+                    border-radius: 2rem;
+                    margin-top: 1rem;
+                    box-shadow: 0rem 0rem 2rem $colorSombra;
+                    border: 1px solid $colorBordeProducto;
+                }
+            }
+        }
+    }
+    .infoClientes {
+        @include propiedadesGenerales ($colorFondoDos, 100%, auto, 0.5rem);
+        padding: 5rem 0;
+        text-align: center;
+        margin-bottom: 5rem;
+        .contenedorTitulo{
+            margin-bottom: 5rem;
+        }
+        .clientesFelicesMovile {
+            margin: 0 auto;
+            .carousel {
+                width: auto;
+                height: 27rem;
+                margin-bottom: 0rem;
+                .opinion {
+                    width: 25rem;
+                    height: 27rem;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    margin: 0 auto;
+                    
+                    margin-bottom: 2.5rem;
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                    img {
+                        width: 8rem;
+                        height: 8rem;
+                        border-radius: 50%;
+                        overflow: hidden;
+                        margin-bottom: 1.5rem;
+                    }
+                    p {
+                        font-size: 1.3rem;
+                        span {
+                            font-size: 1.4rem;
+                            font-weight: 800;
+                        }
+                    }
+                }
+            }
+        }
+        .clientesFelices {
+            display: none;
+            
+        }
+    }
+    .infoUbicacion {
+        @include propiedadesGenerales ($colorFondo, 100%, auto, 0);
+        text-align: center;
+        .contenedorTitulo{
+            margin-bottom: 2.5rem;
+        }
+        p {
+            width: 90%;
+            margin: 0 auto;
+        }
+        .ubicacion {
+            display: flex;
+            flex-direction: column;
+            width: 90%;
+            margin: 0 auto;
+            
+            .ubicacion__local {
+                .local {
+                    width: 100%;               
+                    object-fit: contain;
+                    
+                }
+            }
+            .ubicacion__mapa {
+                width: 100%;
+                height: 30rem;
+                box-shadow: 0rem 0rem 2rem $colorSombra;
+                border: 1px solid $colorBordeProducto;
+                
+            }
+        }
+    }
+}
 // Main Preguntas Frecuentes
 .cuerpoFaqs {
     grid-area: main;
     margin-top: 0;
     margin-bottom: 7rem;
     .navegacionFaqsMovile {
-        margin: 0;
-        padding-top: 4rem;
+        padding-top: 3rem;
         margin: 0 auto;
+        margin-bottom: 7rem;
         .carousel {
             width: 30rem;
             height: 20rem;
@@ -522,7 +459,6 @@
         }
     }
 }
-
 // Boton Whatsapp
 .contenedorWhatsapp {
     background-color: #2e6329;
