--- a/scss/_mediaQuery.scss
+++ b/scss/_mediaQuery.scss
@@ -1,183 +1,3 @@
-// @media (max-width: 991px) {
-//     //Reseteo
-//     .decoracionTitulo {
-//         width: 100%;
-//     }
-//     // Nav Header
-//     .buscador {
-//         width: 100%;
-//     }
-
-//     
-
-    
-//     // Pagina Nosotros
-//     .nosotros__info {
-//         flex-direction: column;
-//     }
-
-//     .nosotros {
-//         width: 90%;
-
-//         .nosotros__info {
-//             .informacion {
-//                 width: 100%;
-//                 margin-bottom: 2.5rem;
-
-//             }
-
-//             .imagen {
-//                 width: 100%;
-//             }
-//         }
-//     }
-
-//     .ordenUno {
-//         order: 1;
-//     }
-
-//     .ordenDos {
-//         order: 2;
-//     }
-
-//     .satisfaccionClientes {
-//         background-color: $colorFondoDos;
-//         width: 100%;
-//         height: auto;
-//         padding: 5rem 0;
-//         margin-top: 7rem;
-//         border-radius: 0.5rem;
-
-//         .satisfaccionClientes__clientesFelices {
-//             text-align: center;
-//             margin-bottom: 2.5rem;
-//         }
-
-//         .satisfaccionClientes__opiniones {
-//             flex-direction: column;
-//             width: 100%;
-
-//             .opinion {
-//                 width: 32rem;
-//                 margin: 2.5rem auto;
-//             }
-//         }
-//     }
-
-//     .clientesFelices__titulo::after,
-//     .clientesFelices__titulo::before {
-//         content: '';
-//         position: absolute;
-//         width: 6.10rem;
-//         height: 0.10rem;
-//         background-color: currentColor;
-//         top: 2rem;
-//     }
-
-//     .clientesFelices__titulo::after {
-//         right: -10.10rem;
-//     }
-
-//     .clientesFelices__titulo::before {
-//         left: -10.10rem;
-//     }
-
-//     // Pagina Preguntas Frecuentes
-//     .encabezadoFaqs h1 {
-//         top: 28rem;
-//     }
-
-//     .cuerpoFaqs {
-//         .contenedorFaqs {
-//             .faqs {
-//                 flex-direction: column;
-
-//                 .faqs__logo {
-//                     margin-bottom: 2.5rem;
-//                 }
-//             }
-//         }
-
-//         .preguntas {
-//             .stock {
-//                 width: 20rem;
-//             }
-
-//             .cambios {
-//                 width: 20rem;
-//             }
-
-//             .envios {
-//                 width: 20rem;
-//             }
-
-//             .pagos {
-//                 width: 20rem;
-//             }
-
-//             .otras {
-//                 width: 20rem;
-//             }
-//         }
-
-//         .stock::after,
-//         .stock::before,
-//         .cambios::after,
-//         .cambios::before,
-//         .envios::after,
-//         .envios::before,
-//         .pagos::after,
-//         .pagos::before,
-//         .otras::after,
-//         .otras::before {
-//             width: 5.5rem;
-//         }
-
-//         .stock::after,
-//         .cambios::after,
-//         .envios::after,
-//         .pagos::after,
-//         .otras::after {
-//             right: -7.5rem;
-//         }
-
-//         .stock::before,
-//         .cambios::before,
-//         .envios::before,
-//         .pagos::before,
-//         .otras::before {
-//             left: -7.5rem;
-//         }
-//     }
-//     // Pagina Contactos
-//     .cuerpoContacto {
-//         .contacto {
-//             width: 20rem;
-//         }
-
-//         .formulario {
-//             width: 90%;
-//         }
-//     }
-
-//     .contacto::after,
-//     .contacto::before {
-//         width: 6.75rem;
-//     }
-
-//     .contacto::after {
-//         right: -8.75rem;
-//     }
-
-//     .contacto::before {
-//         left: -8.75rem;
-//     }
-
-//     
-    
-//     
-// }
-
 @media (min-width: 991px) {
     // Grid
     .contenedorGrid {
@@ -198,10 +18,12 @@
             }
         }
     }
-    // Página Tienda
-    .infoTienda {
-        p {
-            width: 80%;
+    // Main Tienda
+    .cuerpoTienda {
+        .infoTienda {
+            p {
+                width: 80%;
+            }
         }
     }
     .contenedorZapatillas {
@@ -211,6 +33,95 @@
         margin-top: 5rem;
         .producto{
             @include propiedadesGenerales ($colorFondo, 25rem, auto, 0rem);
+        }
+    }
+    // Main Nosotros
+    .cuerpoNosotros {
+        .nosotros {
+            .nosotros__info {
+                width: 80%;
+                margin: 0 auto;
+                flex-direction: row;
+                text-align: center;
+                margin-bottom: 2.5rem;
+                .informacion {
+                    width: 50%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    padding: 0 2.5rem;
+                    h3 {
+                        margin-bottom: 2.5rem;
+                        
+                    }
+                }
+                .imagen {
+                    width: 50%;
+                }
+                .ordenUno {
+                    order: 2;
+                }
+                .ordenDos {
+                    order: 1;
+                }
+            }
+        }
+        .infoClientes {
+            .clientesFelicesMovile {
+                display: none;
+            }
+            .clientesFelices {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                width: 80%;
+                margin: 0 auto;
+                .opinion {
+                    width: 25rem;
+                    height: 23rem;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    text-align: center;
+                    margin: 0 1em;
+                    margin-bottom: 2.5rem;
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                    img {
+                        width: 8rem;
+                        height: 8rem;
+                        border-radius: 50%;
+                        overflow: hidden;
+                        margin-bottom: 1.5rem;
+                    }
+                    p {
+                        font-size: 1.3rem;
+                        span {
+                            font-size: 1.4rem;
+                            font-weight: 800;
+                        }
+                    }
+                }
+            }
+        }
+        .infoUbicacion {
+            p {
+                width: 80%;
+            }
+            .ubicacion {
+                flex-direction: row;
+                justify-content: space-around;
+                height: 30rem;
+                margin-top: 5rem;
+                .ubicacion__local {
+                    width: 50%;
+                }
+                .ubicacion__mapa {
+                    width: 40%;
+                }
+            }
         }
     }
     // Main Preguntas Frecuentes
@@ -259,65 +170,12 @@
             width: 80%;
         }
     }
-    
-    // Main Nosotros
-    .cuerpoNosotros {
-        .nosotros {
-            .nosotros__info {
-                width: 80%;
-                margin: 0 auto;
-                flex-direction: row;
-                text-align: center;
-                margin-bottom: 5rem;
-                .informacion {
-                    width: 50%;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    padding: 0 2.5rem;
-                    h3 {
-                        margin-bottom: 2.5rem;
-                        text-decoration: underline;
-                    }
-                }
-                .ordenUno {
-                    order: 2;
-                }
-                .ordenDos {
-                    order: 1;
-                }
-                
-            }
-        }
-        .infoClientes {
-            .clientesFelices {
-                flex-direction: row;
-                width: 80%;
-                margin: 0 auto;
-                justify-content: space-between;
-                
-            }
-        }
-        .infoUbicacion {
-            p {
-                width: 80%;
-            }
-            .ubicacion {
-                flex-direction: row;
-                justify-content: space-around;
-                height: 30rem;
-                margin-top: 5rem;
-                .ubicacion__local {
-                    width: 50%;
-                }
-                .ubicacion__mapa {
-                    width: 40%;
-                }
-            }
+    // Main Contacto
+    .cuerpoContacto {
+        .formulario {
+            width: 50%;
         }
     }
-
-    
     // Decoracion Titulos
     .contenedorTitulo{
         width: 70%;
@@ -327,12 +185,6 @@
         .antes,
         .despues {
             flex: 25%;
-        }
-    }
-    // Main Contacto
-    .cuerpoContacto {
-        .formulario {
-            width: 50%;
         }
     }
     // Footer
