--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -324,6 +324,7 @@
             flex-direction: column;
             width: 90%;
             margin: 0 auto;
+            margin-top: 1.5rem;
 
             .ubicacion__local {
                 .local {
@@ -338,7 +339,7 @@
                 height: 30rem;
                 box-shadow: 0rem 0rem 2rem $colorSombra;
                 border: 1px solid $colorBordeProducto;
-
+                margin-top: 2.5rem;
             }
         }
     }
